--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@
                                                        title="disabled: 禁用键盘&#13;sdk: 使用Android系统API&#13;uhid: 模拟物理键盘&#13;aoa: 使用AOAv2协议"></i>
                                                 </label>
                                                 <select class="form-select" id="keyboardMode">
+                                                    <option value="">默认</option>
                                                     <option value="disabled">禁用</option>
                                                     <option value="sdk">SDK</option>
                                                     <option value="uhid">UHID</option>
@@ -564,6 +565,7 @@
                                                        title="disabled: 禁用鼠标&#13;sdk: 使用Android系统API&#13;uhid: 模拟物理鼠标&#13;aoa: 使用AOAv2协议"></i>
                                                 </label>
                                                 <select class="form-select" id="mouseMode">
+                                                    <option value="">默认</option>
                                                     <option value="disabled">禁用</option>
                                                     <option value="sdk">SDK</option>
                                                     <option value="uhid">UHID</option>
@@ -581,6 +583,7 @@
                                                        title="disabled: 禁用游戏手柄&#13;uhid: 模拟物理游戏手柄&#13;aoa: 使用AOAv2协议"></i>
                                                 </label>
                                                 <select class="form-select" id="gamepadMode">
+                                                    <option value="">默认</option>
                                                     <option value="disabled">禁用</option>
                                                     <option value="uhid">UHID</option>
                                                     <option value="aoa">AOA</option>
@@ -845,11 +848,11 @@
                                             <label class="form-label">日志级别</label>
                                             <select class="form-select" id="verbosity">
                                                 <option value="">默认（info）</option>
-                                                <option value="verbose">详细</option>
-                                                <option value="debug">调试</option>
-                                                <option value="info">信息</option>
-                                                <option value="warn">警告</option>
-                                                <option value="error">错误</option>
+                                                <option value="verbose">详细 (verbose)</option>
+                                                <option value="debug">调试 (debug)</option>
+                                                <option value="info">信息 (info)</option>
+                                                <option value="warn">警告 (warn)</option>
+                                                <option value="error">错误 (error)</option>
                                             </select>
                                         </div>
 
