--- a/index.html
+++ b/index.html
@@ -843,10 +843,9 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="row">
-                                        <!-- 原有选项 -->
                                         <div class="col-md-6 mb-3">
                                             <label class="form-label">日志级别</label>
-                                            <select class="form-select" id="verbosity">
+                                            <select class="form-select" id="logLevel">
                                                 <option value="">默认（info）</option>
                                                 <option value="verbose">详细 (verbose)</option>
                                                 <option value="debug">调试 (debug)</option>
@@ -856,7 +855,6 @@
                                             </select>
                                         </div>
 
-                                        <!-- 新增选项 -->
                                         <div class="col-md-6 mb-3">
                                             <label class="form-label">渲染驱动
                                                 <i class="bi bi-question-circle tooltip-icon" 
